# daily-tracker

./: .gitignore  CLAUDE.md  Makefile  README.md  TechDesign.md  package-lock.json  package.json  swagger.json  tsconfig.json
.github/workflows/: rust.yml
backend/: .env  .env.example  Cargo.toml  README.md  db.sql
backend/.cargo/: config.toml
backend/.openapi-generator/: FILES
backend/api/: openapi.yaml
backend/crates/db_model/: Cargo.toml
backend/crates/db_model/migrations/2026-01-11-082912-0000_create_table/: down.sql  up.sql
backend/crates/db_model/migrations/2026-03-22-025854-0000_add_topic_display_color/: down.sql  up.sql
backend/crates/db_model/migrations/2026-03-24-075732-0000_add_user_auth/: down.sql  up.sql
backend/crates/db_model/migrations/2026-04-06-030038-0000_add_email_verification/: down.sql  up.sql
backend/crates/db_model/migrations/2026-04-25-100000-0000_add_api_keys/: up.sql
backend/crates/db_model/migrations/2026-05-05-093000-0000_add_duration_minutes_to_daily_track/: down.sql  up.sql
backend/crates/db_model/src/: lib.rs  models.rs  schema.rs
backend/crates/logging/: Cargo.toml
backend/crates/logging/src/: lib.rs  mod.rs
backend/crates/models/: Cargo.toml
backend/crates/models/src/: api_key.rs  auth.rs  convert.rs  daily_track.rs  error.rs  lib.rs  topic.rs
backend/crates/openapi/: Cargo.toml  README.md
backend/crates/openapi/.openapi-generator/: FILES
backend/crates/openapi/api/: openapi.yaml
backend/crates/openapi/docs/: CreateDailyTrackRequest.md  CreateTopicRequest.md  DailyTrack.md  Topic.md
backend/crates/openapi/examples/client/: main.rs
backend/crates/openapi/src/: lib.rs  models.rs
backend/crates/openapi/src/apis/: daily_track.rs  mod.rs  topic.rs
backend/crates/openapi/src/server/: mod.rs
backend/crates/server_impl/: db.rs  email.rs  handler.rs  main.rs  request_logger.rs  server.rs  server_auth.rs
backend/crates/storage/db/: Cargo.toml
backend/crates/storage/db/src/: db.rs  lib.rs
backend/crates/utils/: Cargo.toml
backend/crates/utils/src/: snowflake.rs
backend/docs/: DailyTrack.md  ErrorResponse.md  daily_track_api.md  topic_api.md
backend/examples/server/: server.rs
backend/src/: context.rs  schema.rs
backend/src/client/: mod.rs
backend/src/server/: mod.rs
cli/: README.md
cli/src/: args.ts  bin.ts  client.ts  help.ts  index.ts
deploy/: daily-tracker-backend.service  daily-tracker-frontend.nginx  install.sh  setup.sh
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiKeys.ts  config.ts  dailyTracks.ts  errors.ts  topics.ts
frontend/src/components/: AuthContext.tsx  TopicCascadeSelect.tsx  TopicColorPicker.tsx
frontend/src/pages/: ApiKeysPage.tsx  DailyTracksPage.tsx  Login.tsx  Register.tsx  TopicsPage.tsx  VerifyEmail.tsx
openspec/changes/archive/2026-02-05-implement-daily-track-insertion/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-implement-daily-track-insertion/specs/create-daily-track-persistence/: spec.md
openspec/changes/archive/2026-02-17-implement-api-endpoints/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-implement-api-endpoints/specs/api-error-handling/: spec.md
openspec/changes/archive/2026-02-17-implement-api-endpoints/specs/create-daily-track-persistence/: spec.md
openspec/changes/archive/2026-02-17-implement-api-endpoints/specs/daily-track-api/: spec.md
openspec/changes/archive/2026-02-17-implement-api-endpoints/specs/topic-api/: spec.md
openspec/specs/api-error-handling/: spec.md
openspec/specs/create-daily-track-persistence/: spec.md
openspec/specs/daily-track-api/: spec.md
openspec/specs/topic-api/: spec.md
skills/daily-tracker/: SKILL.md
skills/daily-tracker-setup/: SKILL.md
