[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
always_send = "0.1.1"
clap = "4.5"
env_logger = "0.11"
tokio = { version = "1.48", features = ["full"] }
native-tls = "0.2"
pin-project = "1.1.10"
jsonwebtoken = "9.3.1"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "7.0.0", features = ["serdejson", "server", "client", "tls"] }
headers = "0.4.0"
log = "0.4.27"
openapi = { path = "crates/openapi", package = "openapi_client" }
db_model = { path = "crates/db_model", package = "db_model" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = { version = "0.16", optional = true }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["service"] }
diesel = { version = "2.2.0", features = ["mysql", "chrono", "mysql_backend", "time"] }
dotenvy = "0.15"

[workspace]
members = [
 "crates/openapi", 
 "crates/db_model"
]

[[bin]]
name = "daily_tracker_backend"
path = "crates/server_impl/main.rs"
