[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
always_send = "0.1.1"
clap = "4.5"
env_logger = "0.11"
tokio = { version = "1.48", features = ["full"] }
native-tls = "0.2"
pin-project = "1.1.10"
jsonwebtoken = "9.3.1"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "7.0.0", features = [
    "serdejson",
    "server",
    "client",
    "tls",
] }
headers = "0.4.0"
log = "0.4.27"
# openapi = { path = "crates/openapi", package = "openapi_client" }
db_model = { path = "crates/db_model", package = "db_model" }
models = { path = "crates/models", package = "models" }
logging = { path = "crates/logging", package = "logging" }
db = { path = "crates/storage/db", package = "db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = { version = "0.16", optional = true }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["service"] }
diesel = { version = "2.2.0", features = [
    "mysql",
    "chrono",
    "mysql_backend",
    "time",
] }
dotenvy = "0.15"
axum = "0.7"
http-body-util = "0.1"
# Utoipa 核心库
utoipa = { version = "4", features = ["axum_extras"] }
# 集成 Swagger UI
utoipa-swagger-ui = { version = "6", features = ["axum"] }
once_cell = "1.21.3"


[workspace]
members = ["crates/openapi", "crates/db_model", "crates/logging", "crates/models", "crates/storage/db"]

[workspace.dependencies]
always_send = "0.1.1"
clap = "4.5"
env_logger = "0.11"
tokio = { version = "1.48", features = ["full"] }
native-tls = "0.2"
pin-project = "1.1.10"
jsonwebtoken = "9.3.1"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "7.0.0", features = [
    "serdejson",
    "server",
    "client",
    "tls",
] }
headers = "0.4.0"
log = "0.4.27"
# openapi = { path = "crates/openapi", package = "openapi_client" }
db_model = { path = "crates/db_model", package = "db_model" }
models = { path = "crates/models", package = "models" }
logging = { path = "crates/logging", package = "logging" }
db = { path = "crates/storage/db", package = "db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["service"] }
diesel = { version = "2.2.0", features = [
    "mysql",
    "chrono",
    "mysql_backend",
    "time",
] }
dotenvy = "0.15"
axum = "0.7"
# Utoipa 核心库
utoipa = { version = "4", features = ["axum_extras"] }
# 集成 Swagger UI
utoipa-swagger-ui = { version = "6", features = ["axum"] }
once_cell = "1.21.3"

[[bin]]
name = "daily_tracker_backend"
path = "crates/server_impl/main.rs"
