[package]
name = "models"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
db_model = { path = "../db_model", package = "db_model" }
serde_with = { workspace = true}

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }
