[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
db_model = { workspace = true }
diesel = { workspace = true }
once_cell = { workspace = true }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
r2d2 = "0.8"
dotenvy = "0.15"

